# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xu-zskEW5hwtGgKZQeVFe_MnuVgsYZmJhpC--WW-KiG8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1WGeau9hcnonC6Ts8jIkKXXyo3SDjb_twNpoyKDEa6sM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1IiSWaPjIKpI8SUn42_We-JcpsTO-AMtgpK7FP-l6-dY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xHgoaWtnUVr9GzPMcKR46CWkXxBvfAD5j4J6_upyZOrU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1t2G012jPEqwOqFnwTkrCExkoydRVpkhS6xoKf4RnGCo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1wbyiu2weeCVpKI_RvqAXU9Mnk9rPY0evgwFsg3ri_6c=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1irT-v204QkrjXkmhyk1nFo1nNWhhSoJKCNmuIwHzoi4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2-R-d2KPEQipMeo0zX2NetNPgDr-TGhsCZK7sRW5L-jI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2CfguTTijIm-j1omziW1xzHXUEawZ7-AZh4XUWcEkkMU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Ea_3Qo-PA_DHF_o3UVuFLdK1V9_kG9O16igR6RBQUNo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2S413OKkUAdV8T0x3bp6lKeIsx9_6DbSFA1ZN1MGTISM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2SJjwDh0jOVaGzREOWYWiMmv3vN-TdDgtqHGiZMb-CuQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT16asndoDwue_TCZUwz6XAHNJPzeUSN8cxvCnGX8ZTWmg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1B8EEuvO0nvanJJQCSqKT5k1Xroa0SkNXlX-rh4-9Ymo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1BpPGPzHE4oGR-CaLax8oBe1PD06laeqcOYmkAHcA5cI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1RgXhLJMKw_N3iejnhOuVY5l1V3_Bj0Ov1vTL_hTsWSU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1_72khYZbPYiQEowkT5lGh_MAYKUggh2gPfKvEkBWqcg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1w7lPQxUS62vnudanozCFG5voMVLoGuJe7WJ8zasaWx0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x19D2u6c21dr-xMnhBZUcWy7POR4WHdmGTFoQjQlkB1RU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x645v5se0wStdYeAqiS7hHDSLNBEi_IPLoknibV_buP2eQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64qQ3vN9FARG_XyIvzj6T2Qaqi_8mvgDB-nxMh_qB55_M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x12HQ1wBvDrrxGJeN6IrxhJl3uQBVpIT6oaxETS_fAsYA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1BAMjA_v3klcOphDxt8RDvJHa-HF1VE5JPF1a__n_VWo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1Ir_8RBJ8OYfVZIeSOLcfQSY4yh8m5JUsKNr3DaPLEpA=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2GEMCoPiYWAWMr9MTzwU3TFd-0i0SvP3O0J6VJVld3dg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2knUi8gtEVZMVx4ATz36gPmHxnB1sPuMBchmJzOrpKvM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3WfRv1BCUaFm3LxxFv8Wauu3sIDCLbYXyT7eBxc7ltgI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32KE90BjaPrjRayrejniWWRbsIpEHKYb_mkMSEnqqnV9k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32XZ78Q7y5Jtt4EPRXXObRL1nzzIoGcPvIyQF91kvpWpU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32f6fw53Y8XjgvZYGuT5t8XW509wFV-oVDfb_qbruDoOo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI329gaYHAZWUICH78lwGh1i4NSWeoH1xke4wxdFboMm6JA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32x737LnJlMg4wNbsnCokz7biwDqJXfuja8kg77PY3OBkA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xCIwE3AUjDr-omGlsY9DwfOp-rWREb_lFQZz3VaPUtsI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT10Z3Vx016xpdvSS_zPCQmkpUUG0jwVYYAiPUom4ZuDSA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1A_3Gxo_S7wTA-PQTLY5kfVYJvEuREkTEdQ0Mf7CEkfE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1P-L02QGYR7aplPnYWDENKmlwiV8EXpEqwW8CPf6m6p0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1RAtnbX5Wg7J1u3Rc6ojFERkVnZGOgNnGub4CPtr8WDE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1bUiIfW1tU7Dv2AN2hTIMJDuXs3r7bWRE3xqYNJVjwbI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1ce6rhxCMdJApXOFm5cyg5C_5g7ZsV6VxmXnMwIsk0FQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1H9OLJvfHEnAj2EOKaord-dlcbKEFurjjNhjIu7hWyA8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1SBSPp40tLVnR0X88fAtpIsw1pZYRDeMyOdHbWiLRfbo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT358ICfMkWh2ARzhc5lP6C1UioiJreUnZjlwDfFUJyh4U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3Vcdc25PczZIvPqCSexlOoaTqvFLx1tNX-i9S0zV0n-E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4DFSDILB0n4Uuczl25sZptfdqB2A82HVcXvpMHD6esFE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4FQjhZ-x1gWF_OxzxKE0kqBxl1F7I3TkwW9r9qkOb7Hk=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16bLqvc0iQ3QZQGzX6czOe87UI1SeoS6VZlr57V6m3Gq4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16ue5Uuh0PqENhbYjUCDH-Cpbo-yjkG1iv14_MKdpS0k0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x161RPz7sVBSKsgfvYPH2S_3PySkrWvyG1QOMJ7L2jRwLs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16tIcpv-OvAAwcUGNxazhNCrfagTOxyZEsnh9qPMcgawk=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16NO7Eyo3a36O1ofm9zfIio_KKseq8jmojVFbIQVL9keM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x160U2mgbLXG8kSz12ZH9K2kgPnQFpi4mHPb37uu2fwL0o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16D_uY96NctMmt3IY71YWolEk5wXHrIotGFgfWe2bUlLE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16tg6jUMYr3-hXJ2bHrkARYWOQ2v77Fs_hNhnTrX4GHY0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16TM49L4uMlKvahbBp3Hw0p3JUo-VV90cdcHr8TuEdBOY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16nBnATmavMpP_NoRIaDVcBXOGE20q3O_oMyksFQQy6-M=',
      'err': 0,
    }),
  ])
# ---
